--- a/src/NETXUSASharp/NETXUSASharp.csproj
+++ b/src/NETXUSASharp/NETXUSASharp.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Enums\RequestResult.cs" />
     <Compile Include="Enums\YesNo.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="Interfaces\IHttpLog.cs" />
     <Compile Include="Models\auth.cs" />
     <Compile Include="Models\body_order.cs" />
     <Compile Include="Models\body_product.cs" />
