--- a/src/NETXUSASharp/NETXUSASharp.csproj
+++ b/src/NETXUSASharp/NETXUSASharp.csproj
@@ -51,11 +51,13 @@
     <Compile Include="Connector.cs" />
     <Compile Include="Enums\HttpVerbs.cs" />
     <Compile Include="Enums\RequestResult.cs" />
+    <Compile Include="Enums\OrderSearchField.cs" />
     <Compile Include="Enums\YesNo.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Interfaces\IHttpLog.cs" />
     <Compile Include="Models\auth.cs" />
     <Compile Include="Models\body_order.cs" />
+    <Compile Include="Models\body_order_search.cs" />
     <Compile Include="Models\body_product.cs" />
     <Compile Include="Models\body.cs" />
     <Compile Include="Models\error.cs" />
@@ -66,6 +68,7 @@
     <Compile Include="Models\order.cs" />
     <Compile Include="Models\payment.cs" />
     <Compile Include="Models\provisioningTemplate.cs" />
+    <Compile Include="Models\result.cs" />
     <Compile Include="Models\response.cs" />
     <Compile Include="Models\serialization.cs" />
     <Compile Include="Models\shipping.cs" />
