- Increased version from 1.0.3 to 1.0.4  - Created endUserAddress instead of just reusing address to better conform with the schema  - Added creditCard and default payment options  - Created enums for ShippingCarrier and ShippingMethod and changed shipping to use instead of strings

--- a/src/NETXUSASharp/NETXUSASharp.csproj
+++ b/src/NETXUSASharp/NETXUSASharp.csproj
@@ -49,17 +49,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Connector.cs" />
+    <Compile Include="Enums\CreditCardType.cs" />
     <Compile Include="Enums\HttpVerbs.cs" />
     <Compile Include="Enums\RequestResult.cs" />
     <Compile Include="Enums\OrderSearchField.cs" />
+    <Compile Include="Enums\ShippingMethod.cs" />
+    <Compile Include="Enums\ShippingCarrier.cs" />
     <Compile Include="Enums\YesNo.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Interfaces\IHttpLog.cs" />
+    <Compile Include="Models\endUserAddress.cs" />
     <Compile Include="Models\auth.cs" />
     <Compile Include="Models\body_order.cs" />
     <Compile Include="Models\body_order_search.cs" />
     <Compile Include="Models\body_product.cs" />
     <Compile Include="Models\body.cs" />
+    <Compile Include="Models\creditCard.cs" />
     <Compile Include="Models\error.cs" />
     <Compile Include="Models\inventory.cs" />
     <Compile Include="Models\invoice.cs" />
